--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,23 @@
             android:name=".DispatchListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".DispatchItemsActivity"
+            android:label="@string/title_activity_dispatch_items"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+
+        <activity android:name=".LoginActivity"
+            android:theme="@style/MyFullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".DispatchItemsActivity"
-            android:label="@string/title_activity_dispatch_items"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
