工时管理软件git项目，完成工时管理软件手机端APP欢迎界面的图片资源设计和相关UI设计

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,12 @@
         <activity
             android:name=".LoginActivity"
             android:theme="@style/MyFullScreen">
+
+        </activity>
+        <activity
+            android:name=".WelcomeActivity"
+            android:theme="@style/MyFullScreen">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
